/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package io.lightcone.relayer.data;

import "core.proto";
import "ethereum.proto";

/////////////////////////////////////////////////////////////////////
// ETHEREUM RAW DATA TYPES
/////////////////////////////////////////////////////////////////////
//TODO(hongyu):迁移到ethereum中，不应该再relayer.data下
message Transaction {
    string hash = 1;
    io.lightcone.core.Amount nonce = 2;
    string blockHash = 3;
    io.lightcone.core.Amount blockNumber = 4;
    io.lightcone.core.Amount transactionIndex = 5;
    string from = 6;
    string to = 7;
    io.lightcone.core.Amount value = 8;
    io.lightcone.core.Amount gasPrice = 9;
    io.lightcone.core.Amount gas = 10;
    string input = 11;
    string r = 12;
    string s = 13;
    string v = 14;
}

message TransactionLog {
    io.lightcone.core.Amount logIndex = 1;
    io.lightcone.core.Amount blockNumber = 2;
    string blockHash = 3;
    string transactionHash = 4;
    io.lightcone.core.Amount transactionIndex = 5;
    string address = 6;
    string data = 7;
    repeated string topics = 8;
    bool removed = 9;
}

message TransactionReceipt {
    string blockHash = 1;
    io.lightcone.core.Amount blockNumber = 2;
    string transactionHash = 3;
    io.lightcone.core.Amount transactionIndex = 4;
    string from = 5;
    string to = 6;
    string contractAddress = 7;
    io.lightcone.core.Amount cumulativeGasUsed = 8;
    io.lightcone.core.Amount gasUsed = 9;
    repeated TransactionLog logs = 10;
    string logsBloom = 11;
    string root = 12;
    io.lightcone.ethereum.TxStatus status = 13;
}

message BlockWithTxHash {
    io.lightcone.core.Amount number = 1;
    string hash = 2;
    string parentHash = 3;
    io.lightcone.core.Amount nonce = 4;
    string sha3Uncles = 5;
    string logsBloom = 6;
    string transactionsRoot = 7;
    string stateRoot = 8;
    string receiptRoot = 9;
    string miner = 10;
    io.lightcone.core.Amount difficulty = 11;
    io.lightcone.core.Amount totalDifficulty = 12;
    string extraData = 13;
    io.lightcone.core.Amount size = 14;
    io.lightcone.core.Amount gasLimit = 15;
    io.lightcone.core.Amount gasUsed = 16;
    io.lightcone.core.Amount timestamp = 17;
    repeated string transactions = 18;
    repeated string uncles = 19;
}

message BlockWithTxObject {
    io.lightcone.core.Amount number = 1;
    string hash = 2;
    string parentHash = 3;
    io.lightcone.core.Amount nonce = 4;
    string sha3Uncles = 5;
    string logsBloom = 6;
    string transactionsRoot = 7;
    string stateRoot = 8;
    string receiptRoot = 9;
    string miner = 10;
    io.lightcone.core.Amount difficulty = 11;
    io.lightcone.core.Amount totalDifficulty = 12;
    string extraData = 13;
    io.lightcone.core.Amount size = 14;
    io.lightcone.core.Amount gasLimit = 15;
    io.lightcone.core.Amount gasUsed = 16;
    io.lightcone.core.Amount timestamp = 17;
    repeated Transaction transactions = 18;
    repeated TransactionReceipt receipts = 19;
    repeated string uncles = 20;
}

message TraceCall {
    string from = 1;
    string to = 2;
    string input = 3;
    string output = 4;
    io.lightcone.core.Amount gas = 5;
    io.lightcone.core.Amount gasUsed = 6;
    string type = 7;
    io.lightcone.core.Amount value = 8;
}

message TransactionTracing {
    string from = 1;
    string to = 2;
    string input = 3;
    string output = 4;
    io.lightcone.core.Amount gas = 5;
    io.lightcone.core.Amount gasUsed = 6;
    string type = 7;
    io.lightcone.core.Amount value = 8;
    repeated TraceCall calls = 9;
}

message TransactionParams {
    string from = 1;
    string to = 2;
    io.lightcone.core.Amount gas = 3;
    io.lightcone.core.Amount gasPrice = 4;
    io.lightcone.core.Amount value = 5;
    string data = 6;
}

